crates/ty_python_types/resources/mdtest/snapshots/for.md_-_For_loops_-_Union_type_as_iterab…_(ba36fbef63a14969).snap
---
source: crates/ty_test/src/lib.rs
expression: snapshot
---
---
mdtest name: for.md - For loops - Union type as iterable where one union element has no `__iter__` method
mdtest path: crates/ty_python_types/resources/mdtest/loops/for.md
---

# Python source files

## mdtest_snippet.py

```
 1 | class TestIter:
 2 |     def __next__(self) -> int:
 3 |         return 42
 4 | 
 5 | class Test:
 6 |     def __iter__(self) -> TestIter:
 7 |         return TestIter()
 8 | 
 9 | def _(flag: bool):
10 |     # error: [not-iterable]
11 |     for x in Test() if flag else 42:
12 |         reveal_type(x)  # revealed: int
```

# Diagnostics

```
error[not-iterable]: Object of type `Test | Literal[42]` may not be iterable
  --> src/mdtest_snippet.py:11:14
   |
 9 | def _(flag: bool):
10 |     # error: [not-iterable]
11 |     for x in Test() if flag else 42:
   |              ^^^^^^^^^^^^^^^^^^^^^^
12 |         reveal_type(x)  # revealed: int
   |
info: It may not have an `__iter__` method and it doesn't have a `__getitem__` method
info: rule `not-iterable` is enabled by default

```
