crates/ty_python_types/resources/mdtest/snapshots/for.md_-_For_loops_-_With_non-callable_it…_(a1cdf01ad69ac37c).snap
---
source: crates/ty_test/src/lib.rs
expression: snapshot
---
---
mdtest name: for.md - For loops - With non-callable iterator
mdtest path: crates/ty_python_types/resources/mdtest/loops/for.md
---

# Python source files

## mdtest_snippet.py

```
 1 | def _(flag: bool):
 2 |     class NotIterable:
 3 |         if flag:
 4 |             __iter__: int = 1
 5 |         else:
 6 |             __iter__: None = None
 7 | 
 8 |     # error: [not-iterable]
 9 |     for x in NotIterable():
10 |         pass
11 | 
12 |     # revealed: Unknown
13 |     # error: [possibly-unresolved-reference]
14 |     reveal_type(x)
```

# Diagnostics

```
error[not-iterable]: Object of type `NotIterable` is not iterable
  --> src/mdtest_snippet.py:9:14
   |
 8 |     # error: [not-iterable]
 9 |     for x in NotIterable():
   |              ^^^^^^^^^^^^^
10 |         pass
   |
info: Its `__iter__` attribute has type `int | None`, which is not callable
info: rule `not-iterable` is enabled by default

```

```
info[possibly-unresolved-reference]: Name `x` used when possibly not defined
  --> src/mdtest_snippet.py:14:17
   |
12 |     # revealed: Unknown
13 |     # error: [possibly-unresolved-reference]
14 |     reveal_type(x)
   |                 ^
   |
info: rule `possibly-unresolved-reference` is enabled by default

```
