crates/ty_python_types/resources/mdtest/snapshots/invalid.md_-_Tests_for_invalid_ty…_-_Diagnostics_for_comm…_-_Module-literal_used_…_(652fec4fd4a6c63a).snap
---
source: crates/ty_test/src/lib.rs
expression: snapshot
---
---
mdtest name: invalid.md - Tests for invalid types in type expressions - Diagnostics for common errors - Module-literal used when you meant to use a class from that module
mdtest path: crates/ty_python_types/resources/mdtest/annotations/invalid.md
---

# Python source files

## foo.py

```
1 | import datetime
2 | 
3 | def f(x: datetime): ...  # error: [invalid-type-form]
```

## PIL/Image.py

```
1 | class Image: ...
```

## bar.py

```
1 | from PIL import Image
2 | 
3 | def g(x: Image): ...  # error: [invalid-type-form]
```

# Diagnostics

```
error[invalid-type-form]: Module `datetime` is not valid in a type expression
 --> src/foo.py:3:10
  |
1 | import datetime
2 |
3 | def f(x: datetime): ...  # error: [invalid-type-form]
  |          ^^^^^^^^ Did you mean to use the module's member `datetime.datetime`?
  |
info: rule `invalid-type-form` is enabled by default
1 | import datetime
2 | 
  - def f(x: datetime): ...  # error: [invalid-type-form]
3 + def f(x: datetime.datetime): ...  # error: [invalid-type-form]
note: This is an unsafe fix and may change runtime behavior

```

```
error[invalid-type-form]: Module `PIL.Image` is not valid in a type expression
 --> src/bar.py:3:10
  |
1 | from PIL import Image
2 |
3 | def g(x: Image): ...  # error: [invalid-type-form]
  |          ^^^^^ Did you mean to use the module's member `Image.Image`?
  |
info: rule `invalid-type-form` is enabled by default
1 | from PIL import Image
2 | 
  - def g(x: Image): ...  # error: [invalid-type-form]
3 + def g(x: Image.Image): ...  # error: [invalid-type-form]
note: This is an unsafe fix and may change runtime behavior

```
